--- a/index old.html
+++ b/index old.html
@@ -10,11 +10,9 @@
 <style>
     .mystyle {
       display: block;
-      margin-left: auto;
-      margin-right: auto;
+      margin: auto;
       border-style: solid;
       border-width: medium;
-      width: 50%;
     }
 
     .green {
@@ -29,36 +27,33 @@
 
 </head>
 <body>
-    <br><br>
-    <div class="my-auto mx-auto w-1/2 text-4xl">
+<div>
+
+    <div class="my-auto mx-auto border-2 border-solid w-2/3">
         <div>
-           <p> Email: </p> <br>
+           <p> Email </p> <br>
            <input class="h-16 w-full border-2 border-solid" type="email" name="email" id="email">
+        </div> 
+
+        <div>
+          <p> Password </p>  <br> <input type="password" id="password" class="h-16 border-2 border-solid w-full">
         </div> <br>
 
-        <div>
-          <p> Password: </p>  <br> <input type="password" id="password" class="h-16 border-2 border-solid w-full">
-        </div>  <br>
-
         <div >
-            <button id="submit" type="submit" class="border-2 border-solid w-full text-center h-16" onclick="myFunction(); myFunction1()"> Login </button> <br>
-        </div>
-
-        <div>
-
-            <p id="test" class="hidden"> Length <span id="length"> </span> Upper <span id="uppe"> </span> Lower <span id="lowe"></span> Number <span id="numbe"></span> </p>  <span id="specia">  </span>  <span id="greate">  </span>  </p> <br>
+            <button id="submit" type="submit" class="border-2 border-solid w-full text-center h-16" onclick="myFunction(); myFunction1()"> Submit </button> <br>
         </div>
 
 
     </div>
+</div>
 
-    <div id="message" class="w-1/2 mx-auto border-8 border-solid border-black hidden">
-        <p class="green"> Password should have: </p>
+    <div id="message" class="w-1/4 mx-auto hidden">
         <p id="character"> At least 8 characters </p>
         <p id="upper"> At least 1 uppercase letter </p>
         <p id="lower"> At least 1 lowercase letter </p>
         <p id="number"> At least 1 number </p>
         <p id="special"> At least 1 special character, e.g., ! @ # ? ] </p>
+        <p id="greater"> Do not use < or > in your password </p>
     </div>
 
 
@@ -68,7 +63,7 @@
 
 function myFunction(){
     var pass = document.getElementById("password").value;
-    var re = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).(?=.*\w).{8,}$/;
+    var re = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$/;
     if (re.test(pass)) {
         alert('correct pass')
         return true;
@@ -84,7 +79,7 @@ var upper = /[A-Z]/g;
 var lower = /[a-z]/g;
 var number = /\d/g;
 var special = /\W/g;
-var greater = /(?=.*[<>])/
+var greater = /[^<>]/
 let text = document.getElementById("password").value;
 let b = upper.test(text);
 let c = lower.test(text);
@@ -93,39 +88,51 @@ let e = special.test(text);
 let f = greater.test(text);
 if(c === true){
 document.getElementById('lower').className = "green";
+document.getElementById('lowe').innerHTML = c;
     }
 if(c === false){ 
     document.getElementById('lower').className = "red";
+    document.getElementById('test').innerHTML += text;
     }
 if(b === true){
     document.getElementById('upper').className = "green";
+    document.getElementById('uppe').innerHTML = b ;
     }
 if(b === false){ 
     document.getElementById('upper').className = "red";
+    document.getElementById('test').innerHTML += text;
     }
 if(text.length >= 8){
     document.getElementById('character').className = "green";
+    document.getElementById('length').innerHTML = "enough text length" ;
     }
 if(text.length < 8){
     document.getElementById('character').className = "red";
+    document.getElementById('test').innerHTML += text ;
     }
 if(d === true){
     document.getElementById('number').className = "green";
+    document.getElementById('numbe').innerHTML = d ;
     }
 if(d === false){ 
     document.getElementById('number').className = "red";
+    document.getElementById('test').innerHTML += text;
     }
 if(e === true){
     document.getElementById('special').className = "green";
+    document.getElementById('specia').innerHTML = e ;
     }
 if(e === false){ 
     document.getElementById('special').className = "red";
+    document.getElementById('test').innerHTML += text;
     }
 if(f === false){
     document.getElementById('greater').className = "green";
+    document.getElementById('greate').innerHTML = f ;
     }
-if(f === true){ 
+if(e === true){ 
     document.getElementById('greater').className = "red";
+    document.getElementById('test').innerHTML += text;
     }
 }
 
